--- a/app/src/main/res/layout/fragment_match_schedule.xml
+++ b/app/src/main/res/layout/fragment_match_schedule.xml
@@ -190,6 +190,7 @@
                             android:orientation="vertical">
 
                             <TextView
+                                android:id="@+id/tvPredictedCount"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="12"
@@ -234,6 +235,7 @@
                             android:orientation="vertical">
 
                             <TextView
+                                android:id="@+id/tvUpcomingCount"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="03"
@@ -278,6 +280,7 @@
                             android:orientation="vertical">
 
                             <TextView
+                                android:id="@+id/tvWonCount"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="08"
