--- a/app/src/main/res/layout/fragment_prediction_history.xml
+++ b/app/src/main/res/layout/fragment_prediction_history.xml
@@ -110,6 +110,7 @@
             android:layout_width="match_parent"
             android:layout_marginTop="10dp"
             android:layout_height="match_parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/item_history_prediction"
             android:layout_marginHorizontal="10dp"
             android:layout_marginBottom="10dp"/>
