--- a/app/src/main/res/layout/fragment_stats.xml
+++ b/app/src/main/res/layout/fragment_stats.xml
@@ -88,6 +88,7 @@
                                 android:orientation="vertical">
 
                                 <TextView
+                                    android:id="@+id/predictions_text"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="120"
@@ -132,6 +133,7 @@
                                 android:orientation="vertical">
 
                                 <TextView
+                                    android:id="@+id/wins_text"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="85"
@@ -140,10 +142,11 @@
                                     android:textStyle="bold" />
 
                                 <TextView
+
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="4dp"
-                                    android:text="UPCOMING"
+                                    android:text="CORRECT"
                                     android:textColor="#9F9F9F"
                                     android:textSize="12sp"
                                     android:textStyle="bold" />
@@ -176,6 +179,7 @@
                                 android:orientation="vertical">
 
                                 <TextView
+                                    android:id="@+id/accuracy_text"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="71%"
@@ -307,6 +311,7 @@
                             android:textSize="18sp" />
 
                         <TextView
+                            android:id="@+id/LastMonths_text"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
@@ -315,6 +320,7 @@
                             android:textSize="14sp" />
 
                         <TextView
+                            android:id="@+id/this_months_text"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="4dp"
