--- a/app/src/main/res/layout/fragment_predictions.xml
+++ b/app/src/main/res/layout/fragment_predictions.xml
@@ -48,6 +48,16 @@
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:layout_marginBottom="10dp"/>
 
+        <TextView
+            android:id="@+id/tvEmptyPredictions"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Currently there's no data"
+            android:textColor="#FFFFFF"
+            android:visibility="gone"
+            android:layout_marginVertical="16dp"/>
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
