--- a/app/src/main/res/navigation/secondgraph.xml
+++ b/app/src/main/res/navigation/secondgraph.xml
@@ -71,6 +71,19 @@
         <argument
             android:name="match"
             app:argType="be.buithg.etghaifgte.domain.models.Data" />
+        <action
+            android:id="@+id/action_matchDetailFragment_to_noteFragment"
+            app:destination="@id/noteFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/noteFragment"
+        android:name="be.buithg.etghaifgte.presentation.ui.fragments.main.NoteFragment"
+        android:label="fragment_note"
+        tools:layout="@layout/fragment_note" >
+        <argument
+            android:name="matchKey"
+            app:argType="string" />
     </fragment>
 
     <fragment
