Integrate ESPN scoreboard API

--- a/app/src/main/res/navigation/secondgraph.xml
+++ b/app/src/main/res/navigation/secondgraph.xml
@@ -70,7 +70,7 @@
         tools:layout="@layout/fragment_match_detail" >
         <argument
             android:name="match"
-            app:argType="be.buithg.etghaifgte.domain.models.Data" />
+            app:argType="be.buithg.etghaifgte.domain.models.Match" />
         <argument
             android:name="fromHistory"
             app:argType="boolean"
